--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <section class="page-header">
       <h1 class="project-name">Tango's Projects</h1>
       <h2 class="project-tagline"></h2>
+      <a href="http://tangu.tk/airhockey/" class="btn">Air Hockey</a>
     </section>
 
     <section class="main-content">
