--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <p>Here I will host most of my projects, feel free to select any of the buttons above to view my projects.</p>
 
       <footer class="site-footer">
-        <a class="btn" style="background-color:blue;" onclick="document.getElementById('header').style.background-image = 'linear-gradient(120deg, #5C258D, #4389A2)'">Shroom Haze</a>
+        <a class="btn" style="background-color:blue;" onclick="document.getElementById('page-header').style.background-image = 'linear-gradient(120deg, #5C258D, #4389A2)'">Shroom Haze</a>
       </footer>
 
     </section>
