--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">      
   </head>
   <body>
-    <section id="header" class="page-header">
+    <section class="page-header">
       <h1 class="project-name">My Projects</h1>
       <h2 class="project-tagline"></h2>
       <a href="http://tangu.tk/airhockey/" class="btn">Air Hockey</a>
@@ -20,7 +20,7 @@
       <p>Here I will host most of my projects, feel free to select any of the buttons above to view my projects.</p>
 
       <footer class="site-footer">
-        <a class="btn" style="background-color:blue;" onclick="document.getElementById('page-header').style.background-image = 'linear-gradient(120deg, #5C258D, #4389A2)'">Shroom Haze</a>
+        <a class="btn" style="background-color:blue;" onclick="document.getElementsByClassName('page-header').style.background-image = 'linear-gradient(120deg, #5C258D, #4389A2)'">Shroom Haze</a>
       </footer>
 
     </section>
