--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">My Projects</h1>
+      <h1 class="project-name">Projects</h1>
       <h2 class="project-tagline"></h2>
       <a href="http://tangu.tk/airhockey/" class="btn">Air Hockey</a>
     </section>
