--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <p>Here I will host most of my projects, feel free to select any of the buttons above to view my projects.</p>
 
       <footer class="site-footer">
+        <span class="site-footer-owner">This page is maintained by <a href="https://github.com/xiTango">xiTango</a>.</span>
         <a class="btn" style="background-color:#9733EE" onclick="document.getElementsByClassName('page-header').style.background-color = 'blue';">Shroom Haze</a>
       </footer>
 
