--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <footer class="site-footer">
         <span class="site-footer-owner">This page is maintained by <a href="https://github.com/xiTango">xiTango</a>.</span>
-        <span><a class="btn" style="background-color:#9733EE" onclick="document.getElementsByClassName('page-header').style.background-color = 'blue';">Shroom Haze</a></span>
+        <span><a class="btn" style="background-color:#9733EE" onclick="document.getElementsByClassName('page-header').style.backgroundImage = 'blue';">Shroom Haze</a></span>
       </footer>
 
     </section>
