--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <footer class="site-footer">
         <span class="site-footer-owner">This page is maintained by <a href="https://github.com/xiTango">xiTango</a>.</span>
-        <span><a class="btn" style="background-color:#9733EE" onclick="document.getElementsByClassName('page-header')[0].style.background = 'linear-gradient(120deg, #00d2ff, #3a7bd5)'; document.getElementsByClassName('anchor')[2].style.color = 'blue'">Reef</a></span>
+        <span><a class="btn" style="background-color:#9733EE" onclick="document.getElementsByClassName('page-header')[0].style.background = 'linear-gradient(120deg, #00d2ff, #3a7bd5)'; document.getElementsByClassName('main-content')[2].style.color = 'blue'">Reef</a></span>
       </footer>
 
     </section>
