--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a href="http://tangu.tk/airhockey/" class="btn">Air Hockey</a>
     </section>
     <section class="main-content">
-      <h3><a id="welcome" class="anchor" href="#welcome" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to my Project Page!</h3>
+      <h3><a id="welcome" class="anchor">Welcome to my Project Page!</a></h3>
       <p>Here I will host most of my projects, feel free to select any of the buttons above to view my projects.</p>
 
       <footer class="site-footer">
