--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a href="http://tangu.tk/airhockey/" class="btn">Air Hockey</a>
     </section>
     <section class="main-content">
-      <h3>Welcome to my project page!</h3>
+      <h3 id="welcome">Welcome to my project page!</h3>
       <p>Here I will host most of my projects, feel free to select any of the buttons above to view my projects.</p>
 
       <footer class="site-footer">
