--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <p>Here I will host most of my projects, feel free to select any of the buttons above to view a project.</p>
 
       <footer class="site-footer">
-        <span class="site-footer-owner">This page is maintained by <a href="https://github.com/xiTango">xiTango</a>.</span>
-        <span><a class="btn" style="background-color:#9733EE" onclick="styleReef()">Reef</a></span>
+        <span class="site-footer-owner">This page is maintained by <a href="https://github.com/xiTango">xiTango</a>.</span><br>
+        <span class="site-footer-credits">Hey<a class="btn" style="background-color:#9733EE" onclick="styleReef()">Reef</a></span>
       </footer>
 
     </section>
