--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
       <footer class="site-footer">
         <span class="site-footer-owner">This page is maintained by <a href="https://github.com/xiTango">xiTango</a>.</span><br>
-        <span class="site-footer-credits">Hey<a class="btn" style="background-color:#9733EE" onclick="styleReef()">Reef</a></span>
+        <span class="site-footer-credits">Themes: <a onclick="styleReef()">Reef</a></span>
       </footer>
 
     </section>
