--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
       <footer class="site-footer">
         <span class="site-footer-owner">This page is maintained by <a href="https://github.com/xiTango">xiTango</a>.</span><br>
-        <span class="site-footer-credits">Themes: <a onclick="stylePurpleBliss()">Purple Bliss</a>, <a onclick="styleReef()">Reef</a>, <a onclick="styleFire()">Fire</a></span>
+        <span class="site-footer-credits">Themes: <a onclick="styleLush()">Lush</a>, <a onclick="styleReef()">Reef</a>, <a onclick="styleFire()">Fire</a></span>
       </footer>
 
     </section>
