--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class="page-header">
       <h1 class="project-name" style="font-family:SignPainter; font-size:128px; text-shadow: 0px 0px 5px black;">Projects</h1>
       <h2 class="project-tagline"></h2>
-      <a href="http://tangu.tk/AirHockey/" class="btn">Air Hockey</a>
+      <a href="http://tangu.tk/FishGame/" class="btn">Fish Game</a>
     </section>
     <section class="main-content">
       <h3 id="welcome">Welcome to my project page!</h3>
