--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <h1 class="project-name" style="font-family:SignPainter; font-size:128px; text-shadow: 0px 0px 5px black;">Projects</h1>
       <h2 class="project-tagline"></h2>
       <a href="http://tangu.tk/EatAndGrow/" class="btn">Eat and Grow</a>
+      <a href="http://tangu.tk/ArmaSquad/" class="btn">Arma</a>
     </section>
     <section class="main-content">
       <h3 id="welcome">Welcome to my project page!</h3>
