--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <p>Here I will host most of my projects, feel free to select any of the buttons above to view a project.</p>
 
       <footer class="site-footer">
-        <span class="site-footer-owner">This page is maintained by <a href="https://github.com/xiTango">xiTango</a>.</span><br>
+        <span class="site-footer-owner">This page is maintained by <a href="https://github.com/tango99">Tango</a>.</span><br>
         <span class="site-footer-credits">Themes: <a onclick="styleLush()">Lush</a>, <a onclick="styleReef()">Reef</a>, <a onclick="styleFire()">Blaze</a></span>
       </footer>
 
