--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </section>
     <section class="main-content">
       <h3 id="welcome">Welcome to my project page!</h3>
-      <p>Here I will host most of my projects, feel free to select any of the buttons above to view a project.</p>
+      <p>Not much here yet, and there probably never will be! :)</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner">This page is maintained by <a href="https://github.com/tango99">Tango</a>.</span><br>
