--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name" style="font-family:SignPainter; font-size:128px; text-shadow: 0px 0px 5px black;">Projects</h1>
+      <h1 class="project-name" style="font-family:SignPainter; font-size:128px; text-shadow: 0px 0px 5px black;">Welcome!</h1>
       <h2 class="project-tagline"></h2>
       <a href="" class="btn">Test Button</a>
     </section>
