--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name" style="font-family:SignPainter; font-size:256px; text-shadow: 0px 0px 10px black;">Welcome!</h1>
+      <h1 class="project-name" style="font-family:SignPainter; font-size:256px; text-shadow: 0px 0px 10px black; -webkit-font-smoothing: antialiased;">Welcome!</h1>
       <a href="" class="btn">Test Button</a>
     </section>
     <section class="main-content">
